data/test/type_check/fail/assign_3.v
wire[3:0] x;
assign x[1:2] = 1;
initial $finish;
